// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spec/Toast renders [EMPTY] 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <test-mock
    duration={null}
    label={null}
    lineColors={null}
    name={null}
    onAction={null}
    onClose={null}
    text={null}
  />
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/Toast renders 047fbe0070 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <test-mock
    duration={5000}
    label=""
    lineColors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    name=""
    onAction={null}
    onClose={null}
    text=""
  />
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/Toast renders 01870f7eaf 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <test-mock
    duration={10000}
    label="button-name"
    lineColors="accenttext"
    name="button-name"
    onAction={null}
    onClose={null}
    text="button-name"
  />
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/Toast renders 20cd2584 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <test-mock
    duration={5000}
    label="test-id"
    lineColors="secondary"
    name="test-id"
    onAction={[Function]}
    onClose={[Function]}
    text="test-id"
  />
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/Toast renders a10939101 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <test-mock
    duration={null}
    label="Label"
    lineColors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    name="Label"
    onAction={[Function]}
    onClose={[Function]}
    text="Label"
  />
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;
